--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,12 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+configurations.all {
+    resolutionStrategy {
+        force 'com.google.zxing:core:3.5.0'
+    }
+}
+
+dependencies {
+    implementation 'com.google.zxing:core:3.5.0'
+}
