--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   qr_flutter: ^4.1.0
   shared_preferences: ^2.2.2
   qr: ^3.0.1
+  pdf: ^3.10.8
+  printer: ^0.0.5
+  printing: ^5.12.0
+  qr_scanner_overlay: ^0.0.2
+  barcode: ^2.2.6
+  qr_code_dart_scan: ^0.7.6
+  get: ^4.6.6
+  simple_barcode_scanner: ^0.0.8
+  qr_bar_code_scanner_dialog: ^0.0.5
 
 dev_dependencies:
   flutter_test:
